# AI-Financial-Analyst-Multi-Agent-RAG-Tooling-

./: .dockerignore  .env  .env.example  .gitignore  CHUNKING_STRATEGY.md  CLAUDE.md  INTERVIEW_QA.md  PROJECT_DEEP_DIVE.md  README.md  VECTOR_DB_VS_RERANK.md  docker-compose.yml  mcp_stdio.py  pyproject.toml  run.py
.claude/: settings.local.json
.claude/commands/: all.md  lint.md  optimize.md  test.md
.claude/hooks/: git-safety.sh  py-lint.sh  run-tests.sh  ui-lint.sh
app/: main.py
app/agents/: aggregator_agent.py  computation_agent.py  critic_agent.py  mcp_enrichment_agent.py  planner_agent.py  rag_agent.py  router_agent.py  yfinance_agent.py
app/api/: deps.py
app/api/v1/: __init__.py  analyst.py  documents.py  eval.py  health.py  mcp_status.py  stock.py
app/cache/: redis_cache.py
app/config/: settings.py
app/core/: exceptions.py
app/db/: models.py  session.py
app/mcp/: client.py  server.py  transport.py
app/models/: base.py  local_client.py  openai_client.py  router.py
app/observability/: llm_tracker.py  middleware.py  tracer.py
app/rag/: chunker.py  embedder.py  loader.py  reranker.py  retriever.py  vector_store.py
app/services/: analyst_service.py  document_service.py  eval_service.py
app/tools/: financial_metrics.py  registry.py
app/workflows/: graph.py  parallel.py  state.py
docker/: Dockerfile  init.sql
docs/superpowers/plans/: 2026-04-28-claude-code-setup.md
docs/superpowers/specs/: 2026-04-28-claude-code-setup-design.md
tests/: test_financial_metrics.py
tests/eval/: queries.json  run_eval.py
ui/: .env.local  package.json  tailwind.config.ts
ui/src/app/: globals.css  layout.tsx
ui/src/app/chat/: page.tsx
ui/src/app/documents/: page.tsx
ui/src/app/eval/: page.tsx
ui/src/app/mcp/: page.tsx
ui/src/app/search/: page.tsx
ui/src/components/layout/: sidebar.tsx
ui/src/lib/: api.ts
