[project]
name = "ai-financial-analyst"
version = "0.1.0"
description = "AI Financial Analyst - Multi-Agent RAG System"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "langfuse>=2.0.0,<3.0.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "pgvector>=0.3.0",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    "mcp>=1.0.0",
    "flashrank>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"