[project]
name = "ai-financial-analyst"
version = "0.1.0"
description = "AI Financial Analyst - Multi-Agent RAG System"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "langfuse>=2.0.0,<3.0.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "pgvector>=0.3.0",
    "pypdf>=4.0.0",
    "pandas>=2.0.0",
    "mcp>=1.0.0",
    "flashrank>=0.2.0",
    "redis[asyncio]>=5.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "isort>=8.0.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "radon>=6.0.1",
    "ruff>=0.15.12",
]
